packages/typ/tests/fixtures/diagnostics/0977_mli_unary_type_overapplied_05.mli
type 'a wrap_epsilon
val x_epsilon : (int, bool) wrap_epsilon
